<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
          <TableLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <TableRow>
                  <Button
                      android:id="@+id/buttonLesson1"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:text="@string/lesson1"/>
                  <Button
                      android:id="@+id/buttonLesson2"
                      android:layout_marginLeft="30dp"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:text="@string/lesson2"/>
                  <Button
                      android:id="@+id/buttonLesson3"
                      android:layout_marginLeft="30dp"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:text="@string/lesson3"/>
              </TableRow>
              <TableRow
                  android:layout_marginTop="20dp">
                  <Button
                      android:id="@+id/buttonLesson4"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:text="@string/lesson4"/>
                  <Button
                      android:id="@+id/buttonLesson5"
                      android:layout_marginLeft="30dp"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:text="Lesson 5"/>
                  <Button
                      android:id="@+id/buttonLesson6"
                      android:layout_marginLeft="30dp"
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:text="Lesson 6"/>
              </TableRow>
          </TableLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>